--- a/index.html
+++ b/index.html
@@ -48,46 +48,231 @@
 
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
+
                 <div class="swiper-slide">
+                    <div class="main-slider-box">
 
-                </div>
-
-            </div>
-            <div class="swiper-pagination"></div>
-        </div>
-
-
-        <div class="main-slider-box">
-
-            <a href="#" class="main-slide-overlay">
-                <i class="fa-solid fa-play"></i>
-            </a>
-            <div class="main-slider-img">
-                <img src="./img/Tokyo ghoul poster.jpg" alt="Tokyo ghoul">
-            </div>
-
-            <div class="main-slider-text">
-                <span class="quality">
-                    High quality
-                </span>
-                <div class="bottom-text">
-
-                    <div class="movie-name">
-                        <span>2014</span>
-                        <strong>Tokyo Ghoul</strong>
-                    </div>
-
-                    <div class="category-rating">
-                        <div class="category">
-                            <a href="#">Horror</a>,<a href="#">Fantasy</a>,<a href="#">Animation</a>
+                        <a href="#" class="main-slide-overlay">
+                            <i class="fa-solid fa-play"></i>
+                        </a>
+                        <div class="main-slider-img">
+                            <img src="./img/Tokyo ghoul poster.jpg" alt="Tokyo ghoul">
                         </div>
-                        <div class="rating">
-                            <img src="./img/IMDB_Logo_2016.svg.png.png" alt=""> 8.0
+
+                        <div class="main-slider-text">
+                            <span class="quality">
+                                High quality
+                            </span>
+                            <div class="bottom-text">
+
+                                <div class="movie-name">
+                                    <span>2014</span>
+                                    <strong>Tokyo Ghoul</strong>
+                                </div>
+
+                                <div class="category-rating">
+                                    <div class="category">
+                                        <a href="#">Horror</a>,<a href="#">Fantasy</a>,<a href="#">Animation</a>
+                                    </div>
+                                    <div class="rating">
+                                        <img src="./img/IMDB_Logo_2016.svg.png.png" alt=""> 8.0
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
+
+
+
+
+                <div class="swiper-slide">
+                    <div class="main-slider-box">
+
+                        <a href="#" class="main-slide-overlay">
+                            <i class="fa-solid fa-play"></i>
+                        </a>
+                        <div class="main-slider-img">
+                            <img src="./img/gotham poster.jpg" alt="Tokyo ghoul">
+                        </div>
+
+                        <div class="main-slider-text">
+                            <span class="quality">
+                                High quality
+                            </span>
+                            <div class="bottom-text">
+
+                                <div class="movie-name">
+                                    <span>2014</span>
+                                    <strong>Tokyo Ghoul</strong>
+                                </div>
+
+                                <div class="category-rating">
+                                    <div class="category">
+                                        <a href="#">Horror</a>,<a href="#">Fantasy</a>,<a href="#">Animation</a>
+                                    </div>
+                                    <div class="rating">
+                                        <img src="./img/IMDB_Logo_2016.svg.png.png" alt=""> 8.0
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+                <div class="swiper-slide">
+                    <div class="main-slider-box">
+
+                        <a href="#" class="main-slide-overlay">
+                            <i class="fa-solid fa-play"></i>
+                        </a>
+                        <div class="main-slider-img">
+                            <img src="./img/band of brothers poster.jpg" alt="Tokyo ghoul">
+                        </div>
+
+                        <div class="main-slider-text">
+                            <span class="quality">
+                                High quality
+                            </span>
+                            <div class="bottom-text">
+
+                                <div class="movie-name">
+                                    <span>2014</span>
+                                    <strong>Tokyo Ghoul</strong>
+                                </div>
+
+                                <div class="category-rating">
+                                    <div class="category">
+                                        <a href="#">Horror</a>,<a href="#">Fantasy</a>,<a href="#">Animation</a>
+                                    </div>
+                                    <div class="rating">
+                                        <img src="./img/IMDB_Logo_2016.svg.png.png" alt=""> 8.0
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+                <div class="swiper-slide">
+                    <div class="main-slider-box">
+
+                        <a href="#" class="main-slide-overlay">
+                            <i class="fa-solid fa-play"></i>
+                        </a>
+                        <div class="main-slider-img">
+                            <img src="./img/Rush hour poster.jpg" alt="Tokyo ghoul">
+                        </div>
+
+                        <div class="main-slider-text">
+                            <span class="quality">
+                                High quality
+                            </span>
+                            <div class="bottom-text">
+
+                                <div class="movie-name">
+                                    <span>2014</span>
+                                    <strong>Tokyo Ghoul</strong>
+                                </div>
+
+                                <div class="category-rating">
+                                    <div class="category">
+                                        <a href="#">Horror</a>,<a href="#">Fantasy</a>,<a href="#">Animation</a>
+                                    </div>
+                                    <div class="rating">
+                                        <img src="./img/IMDB_Logo_2016.svg.png.png" alt=""> 8.0
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+                <div class="swiper-slide">
+                    <div class="main-slider-box">
+
+                        <a href="#" class="main-slide-overlay">
+                            <i class="fa-solid fa-play"></i>
+                        </a>
+                        <div class="main-slider-img">
+                            <img src="./img/tesla poster.jpg" alt="Tokyo ghoul">
+                        </div>
+
+                        <div class="main-slider-text">
+                            <span class="quality">
+                                High quality
+                            </span>
+                            <div class="bottom-text">
+
+                                <div class="movie-name">
+                                    <span>2014</span>
+                                    <strong>Tokyo Ghoul</strong>
+                                </div>
+
+                                <div class="category-rating">
+                                    <div class="category">
+                                        <a href="#">Horror</a>,<a href="#">Fantasy</a>,<a href="#">Animation</a>
+                                    </div>
+                                    <div class="rating">
+                                        <img src="./img/IMDB_Logo_2016.svg.png.png" alt=""> 8.0
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+                <div class="swiper-slide">
+                    <div class="main-slider-box">
+
+                        <a href="#" class="main-slide-overlay">
+                            <i class="fa-solid fa-play"></i>
+                        </a>
+                        <div class="main-slider-img">
+                            <img src="./img/МИР НАИЗНАНКУ poster.jpg" alt="Tokyo ghoul">
+                        </div>
+
+                        <div class="main-slider-text">
+                            <span class="quality">
+                                High quality
+                            </span>
+                            <div class="bottom-text">
+
+                                <div class="movie-name">
+                                    <span>2014</span>
+                                    <strong>Tokyo Ghoul</strong>
+                                </div>
+
+                                <div class="category-rating">
+                                    <div class="category">
+                                        <a href="#">Horror</a>,<a href="#">Fantasy</a>,<a href="#">Animation</a>
+                                    </div>
+                                    <div class="rating">
+                                        <img src="./img/IMDB_Logo_2016.svg.png.png" alt=""> 8.0
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
+
+
+
 
     </section>
 
